ROS 2 Foxy release:
commit ba8289e445ad443cac2c6f60fd792d7172deb32a
Author: Josh <joshua.zutell.18@cnu.edu>
Date:   Mon Feb 21 10:38:38 2022 -0500

    Fixed issue in concurrency container

commit fdd781a013dcd5c6785a40c6a926ab7157798cef
Author: David Conner <david.conner@cnu.edu>
Date:   Sun Feb 20 17:49:15 2022 -0500

    change branch to ros2-devel-alpha target on zutell

commit c909f0794c6b6b15b087fa2abb6b1d86af408a2a
Author: David Conner <david.conner@cnu.edu>
Date:   Sun Feb 20 17:16:47 2022 -0500

    clean up during code review

commit d83101cad7e43f521e16e29d16a177fdf5fe782f
Author: David Conner <david.conner@cnu.edu>
Date:   Sat Feb 19 20:09:26 2022 -0500

    update README, CHANGELOG, setup to version 2.0.0

commit e284047105eddf72b958003766d0ac90a58fb03b
Author: David Conner <david.conner@cnu.edu>
Date:   Sat Feb 19 18:17:41 2022 -0500

    ros2 updates; timing changes

--- a/flexbe_testing/CMakeLists.txt
+++ b/flexbe_testing/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(flexbe_widget)
+project(flexbe_testing)
 
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
@@ -7,17 +7,17 @@ find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 
 INSTALL(PROGRAMS
-    bin/be_action_server
-    bin/be_compress
-    bin/be_launcher
-    bin/breakpoint
-    bin/create_repo
-    bin/evaluate_logs
+    bin/testing_node
     DESTINATION lib/${PROJECT_NAME}
 )
 
 INSTALL(DIRECTORY
     launch
+    DESTINATION share/${PROJECT_NAME}
+)
+
+INSTALL(DIRECTORY
+    test
     DESTINATION share/${PROJECT_NAME}
 )
 
