--- a/.github/workflows/flexbe_ci.yml
+++ b/.github/workflows/flexbe_ci.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 name: FlexBE CI
-# Controls when the action will run. 
+# Controls when the action will run.
 on: [push, pull_request, workflow_dispatch]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -8,12 +8,10 @@ jobs:
   test:
     strategy:
       matrix:
-        ros: [melodic, noetic]
+        ros: [foxy]
         include:
-          - os: ubuntu-18.04
-            ros: melodic
           - os: ubuntu-20.04
-            ros: noetic
+            ros: foxy
             python: python3
 
     runs-on: ${{ matrix.os }}
