--- a/flexbe_behavior_engine/package.xml
+++ b/flexbe_behavior_engine/package.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>flexbe_behavior_engine</name>
-  <version>1.3.1</version>
+  <version>2.0.0</version>
   <description>
     A meta-package to aggregate all the FlexBE packages
   </description>
 
   <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
-  <maintainer email="alireza.mixedreality@gmail.com">Alireza Hosseini</maintainer>
   <license>BSD</license>
 
   <url>http://ros.org/wiki/flexbe</url>
+  <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>
 
   <exec_depend>flexbe_core</exec_depend>
   <exec_depend>flexbe_input</exec_depend>
@@ -25,6 +25,7 @@
 
   <export>
     <build_type>ament_cmake</build_type>
+    <!-- <metapackage/> -->
   </export>
 
 </package>
