--- a/flexbe_testing/package.xml
+++ b/flexbe_testing/package.xml
@@ -4,7 +4,7 @@
     schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
     <name>flexbe_testing</name>
-    <version>1.3.1</version>
+    <version>2.0.0</version>
     <description>
         flexbe_testing provides a framework for unit testing states.
     </description>
@@ -13,8 +13,9 @@
 
     <license>BSD</license>
     <url type="website">http://ros.org/wiki/flexbe_core</url>
-    <url type="bugtracker">https://github.com/team-vigir/flexbe_behavior_engine/issues</url>
+    <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>
 
+    <exec_depend>rclcpp</exec_depend>
     <exec_depend>rclpy</exec_depend>
     <exec_depend>flexbe_core</exec_depend>
     <exec_depend>flexbe_msgs</exec_depend>
@@ -26,7 +27,10 @@
     <test_depend>python3-pytest</test_depend>
     <test_depend>std_msgs</test_depend>
 
+    <buildtool_depend>ament_cmake</buildtool_depend>
+    <buildtool_depend>ament_cmake_python</buildtool_depend>
+
     <export>
-        <build_type>ament_python</build_type>
+        <build_type>ament_cmake</build_type>
     </export>
 </package>
