--- a/flexbe_core/setup.cfg
+++ b/flexbe_core/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/flexbe_core
+script_dir=$base/lib/flexbe_core
 [install]
-install-scripts=$base/lib/flexbe_core
+install_scripts=$base/lib/flexbe_core
