--- a/flexbe_input/setup.cfg
+++ b/flexbe_input/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/flexbe_input
+script_dir=$base/lib/flexbe_input
 [install]
-install-scripts=$base/lib/flexbe_input
+install_scripts=$base/lib/flexbe_input
