--- a/flexbe_mirror/setup.cfg
+++ b/flexbe_mirror/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/flexbe_mirror
+script_dir=$base/lib/flexbe_mirror
 [install]
-install-scripts=$base/lib/flexbe_mirror
+install_scripts=$base/lib/flexbe_mirror
