--- a/flexbe_onboard/setup.cfg
+++ b/flexbe_onboard/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/flexbe_onboard
+script_dir=$base/lib/flexbe_onboard
 [install]
-install-scripts=$base/lib/flexbe_onboard
+install_scripts=$base/lib/flexbe_onboard
