--- a/flexbe_states/setup.cfg
+++ b/flexbe_states/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/flexbe_states
+script_dir=$base/lib/flexbe_states
 [install]
-install-scripts=$base/lib/flexbe_states
+install_scripts=$base/lib/flexbe_states
