--- a/flexbe_testing/setup.cfg
+++ b/flexbe_testing/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/flexbe_testing
+script_dir=$base/lib/flexbe_testing
 [install]
-install-scripts=$base/lib/flexbe_testing
+install_scripts=$base/lib/flexbe_testing
