--- a/flexbe_widget/setup.cfg
+++ b/flexbe_widget/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/flexbe_widget
+script_dir=$base/lib/flexbe_widget
 [install]
-install-scripts=$base/lib/flexbe_widget
+install_scripts=$base/lib/flexbe_widget
