[flexbe_core] add proxy tf listener; modify sync handling and loop timing; flake8, pep257, pylint cleanup; licenses and copyright

--- a/flexbe_core/package.xml
+++ b/flexbe_core/package.xml
@@ -9,7 +9,8 @@
         flexbe_core provides the core components for the FlexBE behavior engine.
     </description>
     <author>Philipp Schillinger</author>
-    <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
+    <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
+    <maintainer email="robotics@cnu.edu">David Conner</maintainer>
 
     <license>BSD</license>
     <url type="website">http://ros.org/wiki/flexbe_core</url>
