--- a/flexbe_core/setup.cfg
+++ b/flexbe_core/setup.cfg
@@ -2,3 +2,7 @@
 script_dir=$base/lib/flexbe_core
 [install]
 install_scripts=$base/lib/flexbe_core
+[pylint.FORMAT]
+max-line-length=130
+[pylint]
+disable=consider-using-f-string,missing-function-docstring,protected-access
