--- a/flexbe_msgs/package.xml
+++ b/flexbe_msgs/package.xml
@@ -9,7 +9,8 @@
         flexbe_msgs provides the messages used by FlexBE.
     </description>
     <author>Philipp Schillinger</author>
-    <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
+    <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
+    <maintainer email="robotics@cnu.edu">David Conner</maintainer>
 
     <license>BSD</license>
     <url type="website">http://ros.org/wiki/flexbe_msgs</url>
