--- a/flexbe_testing/CMakeLists.txt
+++ b/flexbe_testing/CMakeLists.txt
@@ -6,20 +6,36 @@ find_package(ament_cmake_python REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 
-INSTALL(PROGRAMS
+install(PROGRAMS
     bin/testing_node
     DESTINATION lib/${PROJECT_NAME}
 )
 
-INSTALL(DIRECTORY
+install(DIRECTORY
     launch
     DESTINATION share/${PROJECT_NAME}
 )
 
-INSTALL(DIRECTORY
-    test
+install(DIRECTORY
+    tests
     DESTINATION share/${PROJECT_NAME}
 )
+
+if(BUILD_TESTING)
+  find_package(ament_cmake_pytest REQUIRED)
+  set(_pytest_tests
+    tests/flexbe_colcon_test.py
+    # Add other test files here
+  )
+  foreach(_test_path ${_pytest_tests})
+    get_filename_component(_test_name ${_test_path} NAME_WE)
+    ament_add_pytest_test(${_test_name} ${_test_path}
+      APPEND_ENV PYTHONPATH=${CMAKE_CURRENT_BINARY_DIR}
+      TIMEOUT 60
+      WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    )
+  endforeach()
+endif()
 
 # Install Python modules
 ament_python_install_package(${PROJECT_NAME})
