--- a/flexbe_widget/package.xml
+++ b/flexbe_widget/package.xml
@@ -9,7 +9,8 @@
         flexbe_widget implements some smaller scripts for the behavior engine.
     </description>
     <author>Philipp Schillinger</author>
-    <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
+    <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
+    <maintainer email="robotics@cnu.edu">David Conner</maintainer>
 
     <license>BSD</license>
     <url type="website">http://ros.org/wiki/flexbe_core</url>
