--- a/flexbe_msgs/package.xml
+++ b/flexbe_msgs/package.xml
@@ -23,7 +23,7 @@
     <depend>std_msgs</depend>
     <depend>builtin_interfaces</depend>
     <depend>rosidl_default_generators</depend>
-    <exec_depend>rosidl_default_runtime</exec_depend>
+    <depend>rosidl_default_runtime</depend>
     <test_depend>ament_lint_common</test_depend>
     <member_of_group>rosidl_interface_packages</member_of_group>
 
