--- a/flexbe_onboard/package.xml
+++ b/flexbe_onboard/package.xml
@@ -16,11 +16,11 @@
     <url type="website">http://ros.org/wiki/flexbe_core</url>
     <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>
 
-    <exec_depend>rclpy</exec_depend>
-    <exec_depend>flexbe_msgs</exec_depend>
-    <exec_depend>flexbe_core</exec_depend>
-    <exec_depend>flexbe_states</exec_depend>
-    <exec_depend>launch_ros</exec_depend>
+    <depend>rclpy</depend>
+    <depend>flexbe_msgs</depend>
+    <depend>flexbe_core</depend>
+    <depend>flexbe_states</depend>
+    <depend>launch_ros</depend>
 
     <test_depend>ament_copyright</test_depend>
     <test_depend>ament_flake8</test_depend>
