--- a/flexbe_states/package.xml
+++ b/flexbe_states/package.xml
@@ -16,10 +16,10 @@
     <url type="website">http://ros.org/wiki/flexbe_core</url>
     <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>
 
-    <exec_depend>rclpy</exec_depend>
-    <exec_depend>flexbe_msgs</exec_depend>
-    <exec_depend>flexbe_core</exec_depend>
-    <exec_depend>flexbe_testing</exec_depend>
+    <depend>rclpy</depend>
+    <depend>flexbe_msgs</depend>
+    <depend>flexbe_core</depend>
+    <depend>flexbe_testing</depend>
 
     <test_depend>ament_copyright</test_depend>
     <test_depend>ament_flake8</test_depend>
