--- a/flexbe_core/package.xml
+++ b/flexbe_core/package.xml
@@ -20,7 +20,7 @@
     <depend>flexbe_msgs</depend>
     <depend>std_msgs</depend>
     <depend>std_srvs</depend>
-    <depend>tf2_ros</depend>
+    <depend>tf2_ros_py</depend>
 
     <test_depend>ament_copyright</test_depend>
     <test_depend>ament_flake8</test_depend>
