--- a/flexbe_testing/package.xml
+++ b/flexbe_testing/package.xml
@@ -27,6 +27,7 @@
     <test_depend>python3-pytest</test_depend>
     <test_depend>std_msgs</test_depend>
     <test_depend>ament_cmake_pytest</test_depend>
+    <test_depend>launch_testing</test_depend>
 
     <buildtool_depend>ament_cmake</buildtool_depend>
     <buildtool_depend>ament_cmake_python</buildtool_depend>
