--- a/flexbe_core/package.xml
+++ b/flexbe_core/package.xml
@@ -16,14 +16,18 @@
     <url type="website">http://ros.org/wiki/flexbe_core</url>
     <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>
 
-    <exec_depend>rclpy</exec_depend>
-    <exec_depend>flexbe_msgs</exec_depend>
-    <exec_depend>std_srvs</exec_depend>
+    <depend>rclpy</depend>
+    <depend>flexbe_msgs</depend>
+    <depend>std_msgs</depend>
+    <depend>std_srvs</depend>
+    <depend>tf2_ros_py</depend>
 
     <test_depend>ament_copyright</test_depend>
     <test_depend>ament_flake8</test_depend>
     <test_depend>ament_pep257</test_depend>
     <test_depend>python3-pytest</test_depend>
+    <test_depend>launch_ros</test_depend>
+    <test_depend>launch_testing</test_depend>
 
     <export>
         <build_type>ament_python</build_type>
