--- a/.github/workflows/flexbe_ci.yml
+++ b/.github/workflows/flexbe_ci.yml
@@ -8,20 +8,20 @@ jobs:
   test:
     strategy:
       matrix:
-        ros: [iron] #, rolling]
+        ros: [rolling]
         include:
         # - os: ubuntu-22.04
         #   ros: humble
         #   python: python3
         #   ci_branch: ros2-devel
-        - os: ubuntu-22.04
-          ros: iron
-          ci_branch: iron
-          python: python3
         # - os: ubuntu-22.04
-        #   ros: rolling
+        #   ros: iron
+        #   ci_branch: iron
         #   python: python3
-        #   ci_branch: ros2-devel
+        - os: ubuntu-22.04
+          ros: rolling
+          python: python3
+          ci_branch: ros2-devel
 
     runs-on: ${{ matrix.os }}
     env:
